@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* contribute init
+* round of millions in multiqc report
+* include abs gotten reads, bugfix with parkourOrg in empty samples (#111)
+* include abs gotten reads, bugfix with parkourOrg in empty samples
 * logging a mode + force config
 * log restructuring
 * fq file ending check + regex soup
